iconkymbrianto@gmail.com
Apa yang harus di lakukan?

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-AirPush Detector
+AirPush Detector iconkymr
 
 This is a simple Android application which detects other installed
 applications which appear to use the AirPush ad framework and a few
